prod/wordpress/hhk/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      acme.cert-manager.io/http01-edit-in-place: "true"
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/ingress.class: nginx
      stork.libopenstorage.org/migrated: "true"
      stork.libopenstorage.org/migrationName: migrationschedule-interval-2023-03-13-121957
      stork.libopenstorage.org/migrationTime: 2023-03-13-122511
      stork.libopenstorage.org/resource-hash: "1538136765050513875"
    name: ingress-wordpress
    namespace: hhk
  spec:
    rules:
    - host: happyhourknits.us
      http:
        paths:
        - backend:
            service:
              name: hhk-wordpress
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: www.happyhourknits.us
      http:
        paths:
        - backend:
            service:
              name: hhkwordpress
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - happyhourknits.us
      - www.happyhourknits.us
      secretName: hhk-tls
kind: List
metadata:
  resourceVersion: ""
